--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Programming/Maps/ForestHunt_Lee.ForestHunt_Lee
+EditorStartupMap=/Game/Programming/Maps/ForestHunt_Lee.ForestHunt_Lee
+GlobalDefaultGameMode=/Game/Programming/Blueprints/BP_GameMode.BP_GameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
