changed default map to mainmap and changed player start position

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Programming/Maps/ForestHunt_Lee.ForestHunt_Lee
-EditorStartupMap=/Game/Programming/Maps/ForestHunt_Lee.ForestHunt_Lee
+GameDefaultMap=/Game/MainMap.MainMap
+EditorStartupMap=/Game/MainMap.MainMap
 GlobalDefaultGameMode=/Game/Programming/Blueprints/BP_GameMode.BP_GameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
